// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test add attribute 1`] = `
Object {
  "elementUpdateDiff": Object {
    "children": Object {
      "kind": "skip",
    },
    "class": undefined,
    "id": "newId",
    "tag": "div",
  },
  "key": "_",
  "kind": "update",
}
`;

exports[`test add element 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "a",
      "kind": "update",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "b",
      "kind": "update",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "newC",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "c",
      "kind": "insert",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`test change key order 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "b",
      "kind": "update",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "c",
      "kind": "update",
    },
    Object {
      "key": "a",
      "kind": "replace",
      "newElement": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "A",
        },
        "class": "css-0",
        "click": null,
        "id": "A",
        "tag": "div",
      },
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`test complex diff 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "setText",
          "text": "A",
        },
        "class": undefined,
        "id": "",
        "tag": "div",
      },
      "key": "A",
      "kind": "update",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "B",
      "kind": "update",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "K",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "K",
      "kind": "insert",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "children": Array [
            Object {
              "elementUpdateDiff": Object {
                "children": Object {
                  "kind": "skip",
                },
                "class": undefined,
                "id": undefined,
                "tag": "div",
              },
              "key": "text",
              "kind": "update",
            },
            Object {
              "kind": "delete",
            },
          ],
          "kind": "childDiffList",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "C",
      "kind": "update",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "S",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "S",
      "kind": "insert",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "E",
      "kind": "update",
    },
    Object {
      "kind": "delete",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`test delete all children 1`] = `
Object {
  "children": Array [
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "X",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "x",
      "kind": "insert",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "Y",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "y",
      "kind": "insert",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "Z",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "z",
      "kind": "insert",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`test delete attribute 1`] = `
Object {
  "elementUpdateDiff": Object {
    "children": Object {
      "kind": "skip",
    },
    "class": undefined,
    "id": "",
    "tag": "div",
  },
  "key": "_",
  "kind": "update",
}
`;

exports[`test delete element 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "a",
      "kind": "update",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "c",
      "kind": "update",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`test different text return setText 1`] = `
Object {
  "kind": "setText",
  "text": "B",
}
`;

exports[`test insert element 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "a",
      "kind": "update",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "new",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "new",
      "kind": "insert",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "b",
      "kind": "update",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`test replace all 1`] = `
Object {
  "children": Array [
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "X",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "x",
      "kind": "insert",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "Y",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "y",
      "kind": "insert",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "Z",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "z",
      "kind": "insert",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`test replace element 1`] = `
Object {
  "children": Array [
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "a",
      "kind": "update",
    },
    Object {
      "kind": "delete",
    },
    Object {
      "element": Object {
        "children": Object {
          "tag": Symbol(Children - Text),
          "value": "new",
        },
        "class": "css-0",
        "click": null,
        "id": "",
        "tag": "div",
      },
      "key": "new",
      "kind": "insert",
    },
    Object {
      "elementUpdateDiff": Object {
        "children": Object {
          "kind": "skip",
        },
        "class": undefined,
        "id": undefined,
        "tag": "div",
      },
      "key": "c",
      "kind": "update",
    },
  ],
  "kind": "childDiffList",
}
`;

exports[`test same text return skip 1`] = `
Object {
  "kind": "skip",
}
`;
